<resources>
    <string name="ID_hint">    아이디</string>
    <string name="PASS_hint">    비밀번호</string>
    <string name="PASS_check">    비밀번호 확인</string>
    <string name="LOGIN_button">로그인</string>
    <string name="RAGISTER_button">가입하기</string>
    <string name="RAGISTER_">회원가입</string>
    <string name="app_name">tomorrow</string>
    <string name="Planner_Hint">할 일을 입력하세요</string>
    <string name="Planner_button">기입</string>
    <string name="Daialry_edit">내용을 입력하세요</string>
    <string name="Daialry_name">ToDay_Daialry</string>
</resources>